frame/support/test/tests/pallet_ui/call_index_has_suffix.stderr
error: invalid suffix `"something"` for number literal
  --> tests/pallet_ui/call_index_has_suffix.rs:14:19
   |
14 |         #[pallet::call_index(0something)]
   |                   ^^^^^^^^^^
